--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is Koi mil gya</p>
+		<a href="https://youtu.be/Foh01tG09Nk?si=jxBArh0HX3lWVV0R">Koi mil gya</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
